--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                 <a href="{{ url_for('add_user') }}">Добавить пользователя</a>
                 <a href="{{ url_for('list_users') }}">Пользователи</a>
             {% endif %}
-            <a href="{{ url_for('export_csv') }}">Экспорт в CSV</a>
+            <a href="{{ url_for('export_csv') }}">Поиск</a>
             {% if current_user.is_authenticated %}
                 <a href="{{ url_for('logout') }}">Выйти</a>
             {% else %}
