--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -2,35 +2,44 @@
 
 {% block content %}
 <h2>Результаты поиска</h2>
-<table>
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Имя</th>
-            <th>Фамилия</th>
-            <th>Должность</th>
-            <th>Дата приема</th>
-            <th>Зарплата</th>
-            <th>Контактная информация</th>
-            <th>Действия</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for employee in results %}
-        <tr>
-            <td>{{ employee.id }}</td>
-            <td>{{ employee.first_name }}</td>
-            <td>{{ employee.last_name }}</td>
-            <td>{{ employee.position }}</td>
-            <td>{{ employee.hire_date }}</td>
-            <td>{{ employee.salary }}</td>
-            <td>{{ employee.contact_info }}</td>
-            <td class="actions">
-                <a href="{{ url_for('edit_employee', id=employee.id) }}" class="btn btn-blue">Редактировать</a>
-                <a href="{{ url_for('delete_employee', id=employee.id) }}" class="btn btn-red">Удалить</a>
-            </td>
-        </tr>
+
+{% if results %}
+<form id="exportForm" action="{{ url_for('export_csv') }}" method="post">
+    <input type="hidden" name="columns" value="{{ columns | join(',') }}">
+    {% for result in results %}
+        {% for column in columns %}
+            <input type="hidden" name="results[{{ loop.index0 }}]" value="{{ result[column] }}">
         {% endfor %}
-    </tbody>
+    {% endfor %}
+    <button type="button" onclick="exportData()">Экспорт в CSV</button>
+</form>
+<table>
+  <thead>
+    <tr>
+      {% for column in columns %}
+      <th>{{ column_names[table_name][column] }}</th>
+      {% endfor %}
+    </tr>
+  </thead>
+  <tbody>
+    {% for result in results %}
+    <tr>
+      {% for column in columns %}
+      <td>{{ result[column] }}</td>
+      {% endfor %}
+    </tr>
+    {% endfor %}
+  </tbody>
 </table>
+{% else %}
+<p>Ничего не найдено.</p>
+{% endif %}
+
+<script>
+    function exportData() {
+        var form = document.getElementById("exportForm");
+        form.submit();
+    }
+</script>
+
 {% endblock %}
