add dockerfile and docker-compose

--- a/templates/add_guest.html
+++ b/templates/add_guest.html
@@ -15,8 +15,8 @@
     <label for="country">Страна:</label>
     <input type="text" name="country" id="country" required>
     <br>
-    <label for="id_document">Документ:</label>
-    <input type="text" name="id_document" id="id_document" required>
+    <label for="document">Документ:</label>
+    <input type="text" name="document" id="document" required>
     <br>
     <label for="check_in_out_date">Дата въезда/выезда:</label>
     <input type="date" name="check_in_out_date" id="check_in_out_date" required>
