--- a/templates/export_select.html
+++ b/templates/export_select.html
@@ -10,6 +10,8 @@
         <option value="services">Услуги</option>
         <option value="bookings">Бронирования</option>
         <option value="employee_services">История услуг</option>
+        <option value="hotel_rooms">Комнаты</option>
+        <option value="sales">Продажи</option>
     </select>
     <br>
     <input type="text" name="query" placeholder="Поиск">
