--- a/templates/add_sale.html
+++ b/templates/add_sale.html
@@ -3,23 +3,23 @@
 {% block content %}
 <h2>Добавить продажу</h2>
 <form method="POST">
-  <label for="transaction_id">Transaction ID:</label>
+  <label for="transaction_id">ID продажи:</label>
   <input type="text" id="transaction_id" name="transaction_id" required><br><br>
 
-  <label for="sale_date">Sale Date:</label>
+  <label for="sale_date">Дата продажи:</label>
   <input type="date" id="sale_date" name="sale_date" required><br><br>
 
-  <label for="guest_id">Guest:</label>
+  <label for="guest_id">Гость:</label>
   <select id="guest_id" name="guest_id" required>
     {% for guest in guests %}
     <option value="{{ guest.id }}">{{ guest.first_name }} {{ guest.last_name }}</option>
     {% endfor %}
   </select><br><br>
 
-  <label for="sale_amount">Sale Amount:</label>
+  <label for="sale_amount">Сумма продажи:</label>
   <input type="text" id="sale_amount" name="sale_amount" required><br><br>
 
-  <label for="payment_method">Payment Method:</label>
+  <label for="payment_method">Способ оплаты:</label>
   <input type="text" id="payment_method" name="payment_method" required><br><br>
 
   <button type="submit">Добавить продажу</button>
