--- a/templates/list_guests.html
+++ b/templates/list_guests.html
@@ -23,7 +23,7 @@
             <td>{{ guest.last_name }}</td>
             <td>{{ guest.contact_info }}</td>
             <td>{{ guest.country }}</td>
-            <td>{{ guest.id_document }}</td>
+            <td>{{ guest.document }}</td>
             <td>{{ guest.check_in_out_date }}</td>
             <td class="actions">
                 <a href="{{ url_for('edit_guest', id=guest.id) }}" class="btn btn-blue">Редактировать</a>
